TabBar: fix the default layouting of dynamically added tabs

countChanged() used to be connected to updateLayout(), but this went
missing somewhere around 73f931a7. Now we have the itemAdded() and
itemRemoved() hooks that allow us to do the same more efficiently.

Change-Id: I8a3eefb61555358d63fae63d066851038e332233
Task-number: QTBUG-48993
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>