src/templates/qquicktabbar_p.h
@@ -65,6 +65,8 @@ protected:
     void updatePolish() Q_DECL_OVERRIDE;
     void componentComplete() Q_DECL_OVERRIDE;
     void geometryChanged(const QRectF &newGeometry, const QRectF &oldGeometry) Q_DECL_OVERRIDE;
+    void itemAdded(int index, QQuickItem *item) Q_DECL_OVERRIDE;
+    void itemRemoved(int index, QQuickItem *item) Q_DECL_OVERRIDE;
 
 private:
     Q_DISABLE_COPY(QQuickTabBar)
